--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -1,7 +1,7 @@
 build:
-	hugo
+	@hugo > /dev/null
 clean:
-	rm -rf dist/
+	@rm -rf dist/ > /dev/null
 post:
-	hugo new posts/${POST_NAME}.md
-	echo ${POST_TITLE} >> content/posts/${POST_NAME}.md
+	@hugo new posts/${POST_NAME}.md > /dev/null
+	@echo ${POST_TITLE} >> content/posts/${POST_NAME}.md
