--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -5,3 +5,4 @@ clean:
 post:
 	@hugo new posts/${POST_NAME}.md > /dev/null
 	@echo ${POST_TITLE} >> content/posts/${POST_NAME}.md
+	@sed -i "s/${POST_NAME}/${POST_TITLE}/gi" "./content/posts/${POST_NAME}.md"
