--- a/module1_task2/Makefile
+++ b/module1_task2/Makefile
@@ -8,6 +8,6 @@ post:   ## Add a new blog post
 	@sed -i "" "s/${POST_NAME}/${POST_TITLE}/gi" "./content/posts/${POST_NAME}.md"
 help:
 	@echo "build: Create the static web site in dist/"
-	@echo "clean: remove all files from the distribution folder"
+	@echo "clean: Clean remove all files from the distribution folder"
 	@echo "POST_NAME=<file_name> POST_TITLE=<file_title> post: Add a new blog post"
 	@echo "help: Display makefile help"
